                         {FpXQXQ,FlxqXQ,F2xqXQ}_aut{sum,trace,pow}
BA   45-[libpari] FpXQXQ_auttrace now identical to FpXQ_auttrace
BA   46-[libpari] RgX_type now only handles polynomials.
     47-log: change threshold between Taylor / AGM when x close to a power
        of 2 [#1934]
     48-[libpari] ZM_inv and QM_inv interface
     49- K.tu[2]: make it a t_INT if possible, else a t_POLMOD
     50- removed warning "Mod(a,b)^n with n >> b : wasteful"
     51- ellpadicmatrix now returns a pair of matrices (instead of a matrix
         whose entries are pairs of values)
     52- ellpadicheight and ellpadicmatrix no longer accept [p,[a,b]]
         arguments; use * [a,b]~
     53- ellpadics2: allow curves with multiplicative reduction
     54- E/Qp now allowed in ellcard, ellap, ellgroup, ellissupersingular,
         ellpadicfrobenius, ellpadics2, ellintegralmodel
     55- E/Qp convert coefficient to exact form using centered residues
     56- msissymbol now returns a GEN (gen_0/gen_1) instead of a long, allow
         t_MAT arguments and return a vector of 0/1 in this case.
     57- allow mseval(M, t_MAT)
     58- change 'debugmem' default value to 1;
         no memory-related message at value 0 (not recommended under gp).
BA   59- V=galoisfixedfield(,,2): return V[1] in the same variable as the
         coeffs of V[3] instead of P.
     60- numtoperm now returns a t_VECSMALL (so that results can be
         multiplied as permutations, etc.), no longer a ZV
     61- improve Fp_sqrt for p = 5 (mod 8) [Atkin's formula]
     62- improved matrixqz(,‐1 or -2) by using matkermod
     63- The functions psdraw, psploth and psplothraw and the default psfile
         are obsolete. Use one of plotexport, plothexport or plothrawexport
         with format "ps" and write the result to file.
AP   64- new implementation of matsolvemod

  Removed
      1- file 'MACHINES' (no longer maintained)
      2- useless argument nf in ZC_nfval, ZC_nfvalrem, pr_equal, ZC_prdvd